--- a/les1/index.html
+++ b/les1/index.html
@@ -5,16 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test123</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+    p{
+        background-color:coral;
+    }
+    .klasse-1{
+        color:coral;
+    }
+    #id-1{
+        text-decoration:underline;
+    }
+    </style>
 </head>
 <body>
-    <h1>Ik ben een grote titel</h1>
+    <h1 class="klasse-1" >Ik ben een grote titel</h1>
     <h2>Ik ben een grote titel</h2>
     <h3>Ik ben een grote titel</h3>
-    <h4>Ik ben een grote titel</h4>
+    <h4 class="klasse-1">Ik ben een grote titel</h4>
     <h5>Ik ben een grote titel</h5>
-    <h6>Ik ben een grote titel</h6>
-    <p>Hello world!</p>
-    <p>Hello world!</p>
+    <h6 class="klasse-1">Ik ben een grote titel</h6>
+    <p id="id-1">Hello world!</p>
+    <p style="background:purple">Hello world!</p>
     <span>Hello world 2</span>
     <span>Hello world 2</span>
     <a href="https://duckduckgo.com" target="_blank">Zoek</a>
