--- a/les4/ex2/index.html
+++ b/les4/ex2/index.html
@@ -29,7 +29,7 @@
         <div class="three">
             <div class="box">
                 <img class="icon" src="https://picsum.photos/100/100" alt="Icon">
-                <h3>Tempor orci dapibus ultrices in.</h3>
+                <p class="title">Tempor orci dapibus ultrices in.</p>
                 <p>
                     Ut venenatis tellus in metus vulputate. Amet
                     consectetur adipiscing elit pellentesque.
@@ -42,7 +42,7 @@
             </div>
             <div class="box">
                 <img class="icon" src="https://picsum.photos/100/100" alt="Icon">
-                <h3>Tempor orci dapibus ultrices in.</h3>
+                <p class="title">Tempor orci dapibus ultrices in.</p>
                 <p>
                     Ut venenatis tellus in metus vulputate. Amet
                     consectetur adipiscing elit pellentesque.
@@ -55,7 +55,7 @@
             </div>
             <div class="box">
                 <img class="icon" src="https://picsum.photos/100/100" alt="Icon">
-                <h3>Tempor orci dapibus ultrices in.</h3>
+                <p class="title">Tempor orci dapibus ultrices in.</p>
                 <p>
                     Ut venenatis tellus in metus vulputate. Amet
                     consectetur adipiscing elit pellentesque.
@@ -73,24 +73,203 @@
         <div class="mosaic">
             <div class="part-1">
                 <div class="tile">
-
+                    <p class="title">Hello World</p>
+                    <p class="subtitle">What is up?</p>
                 </div>
                 <div class="tile">
-                    
+                    <p class="title">Foo</p>
+                    <p class="subtitle">Bar</p>
                 </div>
                 <div class="tile">
-                    
+                    <p class="title">Third column</p>
+                    <p class="subtitle">With some content</p>
+                    <div class="content">
+                        <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Proin ornare magna eros, eu
+                                    pellentesque tortor vestibulum ut. Maecenas
+                                    non massa sem. Etiam finibus odio quis
+                                    feugiat facilisis.
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="part-2">
                 <div class="part-2-a">
-
+                    <div class="part-2-a1">
+                        <div class="left">
+                            <div class="tile">
+                                <p class="title">Vertical tiles</p>
+                                <p class="subtitle">Top box</p>
+                            </div>
+                            <div class="tile">
+                                <p class="title">Vertical tiles</p>
+                                <p class="subtitle">Bottom box</p>
+                            </div>
+                        </div>
+                        <div class="right tile">
+                            <p class="title">Middle box</p>
+                                    <p class="subtitle">With an image</p>
+                                        <img
+                                            src="https://picsum.photos/640/480/?random"
+                                            alt="Description"
+                                        />
+                        </div>
+                    </div>
+                    <div class="part-2-a2 tile">
+                        <p class="title">Wide column</p>
+                                <p class="subtitle">
+                                    Aligned with the right column
+                                </p>
+                                <div class="content">
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit. Proin ornare magna
+                                        eros, eu pellentesque tortor vestibulum
+                                        ut. Maecenas non massa sem. Etiam
+                                        finibus odio quis feugiat facilisis.
+                                    </p>
+                                </div>
+                    </div>
                 </div>
-                <div class="part-2-b">
-
+                <div class="part-2-b tile">
+                    <p class="title">Tall column</p>
+                    <p class="subtitle">With even more content</p>
+                    <div class="content">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Etiam semper diam at
+                            erat pulvinar, at pulvinar felis
+                            blandit. Vestibulum volutpat tellus
+                            diam, consequat gravida libero rhoncus
+                            ut. Morbi maximus, leo sit amet vehicula
+                            eleifend, nunc dui porta orci, quis
+                            semper odio felis ut quam.
+                        </p>
+                        <p>
+                            Suspendisse varius ligula in molestie
+                            lacinia. Maecenas varius eget ligula a
+                            sagittis. Pellentesque interdum, nisl
+                            nec interdum maximus, augue diam
+                            porttitor lorem, et sollicitudin felis
+                            neque sit amet erat. Maecenas imperdiet
+                            felis nisi, fringilla luctus felis
+                            hendrerit sit amet. Aenean vitae gravida
+                            diam, finibus dignissim turpis. Sed eget
+                            varius ligula, at volutpat tortor.
+                        </p>
+                        <p>
+                            Integer sollicitudin, tortor a mattis
+                            commodo, velit urna rhoncus erat, vitae
+                            congue lectus dolor consequat libero.
+                            Donec leo ligula, maximus et
+                            pellentesque sed, gravida a metus. Cras
+                            ullamcorper a nunc ac porta. Aliquam ut
+                            aliquet lacus, quis faucibus libero.
+                            Quisque non semper leo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="part-3">
+                <div class="left-3 tile">
+                    <p class="title">Side column</p>
+                            <p class="subtitle">With some content</p>
+                            <div class="content">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Proin ornare magna eros, eu
+                                    pellentesque tortor vestibulum ut. Maecenas
+                                    non massa sem. Etiam finibus odio quis
+                                    feugiat facilisis.
+                                </p>
+                            </div>
+                </div>
+                <div class="right-3 tile">
+                    <p class="title">Main column</p>
+                            <p class="subtitle">With some content</p>
+                            <div class="content">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Proin ornare magna eros, eu
+                                    pellentesque tortor vestibulum ut. Maecenas
+                                    non massa sem. Etiam finibus odio quis
+                                    feugiat facilisis.
+                                </p>
+                            </div>
+                </div>
+            </div>
+            <div class="part-4">
+                <div class="left-4 tile">
+                    <p class="title">Murphy's law</p>
+                            <p class="subtitle">
+                                Anything that can go wrong will go wrong
+                            </p>
+                            <div class="content">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Proin ornare magna eros, eu
+                                    pellentesque tortor vestibulum ut. Maecenas
+                                    non massa sem. Etiam finibus odio quis
+                                    feugiat facilisis.
+                                </p>
+                            </div>
+                </div>
+                <div class="right-4 tile">
+                    <p class="title">Main column</p>
+                            <p class="subtitle">With some content</p>
+                            <div class="content">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Proin ornare magna eros, eu
+                                    pellentesque tortor vestibulum ut. Maecenas
+                                    non massa sem. Etiam finibus odio quis
+                                    feugiat facilisis.
+                                </p>
+                            </div>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="columns">
+            <div class="column c1">
+                <p class="title">Category</p>
+                <ul>
+                    <li><a href="#">Lorem ipsum dolor sit amet</a></li>
+                    <li><a href="#">Vestibulum errato isse</a></li>
+                    <li><a href="#">Lorem ipsum dolor sit amet</a></li>
+                    <li><a href="#">Aisia caisia</a></li>
+                    <li><a href="#">Murphy's law</a></li>
+                    <li><a href="#">Flimsy Lavenrock</a></li>
+                    <li><a href="#">Maven Mousie Lavender</a></li>
+                </ul>
+            </div>
+            <div class="column c2">
+                <p class="title">Category</p>
+                <ul>
+                    <li>
+                        <a href="#">Labore et dolore magna aliqua</a>
+                    </li>
+                    <li><a href="#">Kanban airis sum eschelor</a></li>
+                    <li><a href="#">Modular modern free</a></li>
+                    <li><a href="#">The king of clubs</a></li>
+                    <li><a href="#">The Discovery Dissipation</a></li>
+                    <li><a href="#">Course Correction</a></li>
+                    <li><a href="#">Better Angels</a></li>
+                </ul>
+            </div>
+            <div class="column c3">
+                <p class="title">Category</p>
+                <ul>
+                    <li><a href="#">Objects in space</a></li>
+                    <li><a href="#">Playing cards with coyote</a></li>
+                    <li><a href="#">Goodbye Yellow Brick Road</a></li>
+                    <li><a href="#">The Garden of Forking Paths</a></li>
+                    <li><a href="#">Future Shock</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
